--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <meta name="robots" content="index, follow"
 </head>
 <baby>
-  <iframe name="yt" src="https://youtube.com" height="auto" width="auto"></iframe>
+  <iframe name="Test" src="http://smokeyandfriends.github.io/Clicker-game-template" height="768" width="1366"></iframe>
 </html>
 
